<resources>
    <string name="app_name">Hola La Nacion</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="category_politica">Politica</string>
    <string name="category_economia">Economia</string>
    <string name="category_el_mundo">El mundo</string>
    <string name="category_opinion">Opinion</string>
    <string name="category_sociedad">Sociedad</string>
    <string name="category_buenos_aires">Buenos Aires</string>
    <string name="category_espectaculos">Espectaculos</string>
    <string name="category_tecnologia">Tecnologia</string>
    <string name="category_deportes">Deportes</string>
    <string name="category_seguridad">Segurirdad</string>
    <string name="next_label">Siguiente</string>
    <string name="share_label">Compartir</string>
    <string name="share_news_label">Compartiendo Noticia</string>
    <string name="category_label">Cambiar Categorias</string>
    <string name="message_error_category">Tiene que seleccionar al menos una categoria</string>
    <string name="message_news_end">Fin de las noticias</string>

</resources>
