<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_material_light"
                android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@color/background_material_light"
        android:src="@drawable/logo_nacion"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/container_checkbox_left"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/category_buenos_aires"
                android:textColor="@color/background_blue"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible"/>

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:buttonTint="@color/background_blue"
                android:checked="false"
                android:text="@string/category_deportes"
                android:visibility="gone"
                tools:visibility="visible"/>

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:checked="false"
                android:text="@string/category_economia"
                android:visibility="gone"/>

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:checked="false"
                android:text="@string/category_el_mundo"
                android:visibility="gone"/>

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:checked="false"
                android:text="@string/category_espectaculos"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_checkbox_right"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:checked="false"
                android:text="@string/category_opinion"
                android:visibility="gone"
                tools:visibility="visible"/>

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:checked="false"
                android:text="@string/category_politica"
                android:visibility="gone"
                tools:visibility="visible"/>

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:checked="false"
                android:text="@string/category_seguridad"
                android:visibility="gone"/>

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:checked="false"
                android:text="@string/category_sociedad"
                android:visibility="gone"/>

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:checked="false"
                android:text="@string/category_tecnologia"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/category_next_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="85dp"
        android:background="@color/background_blue"
        android:elevation="4dp"
        android:text="@string/next_label"
        android:textColor="@android:color/white"/>
</RelativeLayout>